# soma-to-opensim-dynamics

./: .gitignore  README.md  pyproject.toml
examples/data/: nailing_wall_R_003__A282.bvh
models/: Adjusted_ULBmodel.osim  Adjusted_ULBmodel_arms_only.osim  Adjusted_ULBmodel_arms_only_without_BRA_ANC_PT_TRIlat_TRImed_BICshort.osim
scripts/: run_improved_ulb_example.py
src/safe_opensim/: __init__.py  cli.py  converters.py  ik_setup.py  opensim_resources.py  opensim_storage.py  pipeline.py  seed_dataset.py  static_optimization_setup.py
tests/: test_converters.py  test_static_optimization_setup.py
